.helm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rsoi-hotels
  annotations:
    werf.io/weight: "-60"
spec:
  ingressClassName: nginx
  rules:
    - host: hotels.rsoi.wrathen.ru
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
